test new design

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,7 +1,7 @@
 - name: Kontakt
   link: /contact/
 - name: Über die Plattform
-  link: /about_platform/
+  link: /about/
 - name: Impressum
   link: https://www.th-koeln.de/hochschule/impressum_8159.php
 - name: Haftungshinweis
