--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # ----------------------------------- Basic ---------------------------------- #
 
-title: Start
+title: INTIA
 email: intia@th-koeln.de
 description: >- # this means to ignore newlines until "baseurl:"
   A plattform for methods, techniques, toolkits and patterns for participative development in a social context.
 baseurl: ""
 url: ""
-
+markdown: CommonMarkGhPages
 # ----------------------------------- Theme ---------------------------------- #
 
 theme: null
@@ -18,20 +18,12 @@ footer_menu: footer
 plugins:
   - jekyll-feed
   - jekyll-sitemap
-  - jekyll-paginate
+  - jekyll-paginate-v2
   - jekyll-seo-tag
-  - kramdown-parser-gfm
-  - jekyll-relative-links
-  - jekyll-avatar
   - jekyll-coffeescript
-  - jekyll-commonmark
   - jekyll-commonmark-ghpages
-  - jekyll-default-layout
-  - jekyll-gist
   - jekyll-github-metadata
-  - jekyll-mentions
   - jekyll-optional-front-matter
-  - jekyll-readme-index
   - jekyll-redirect-from
   - jekyll-relative-links
   - jekyll-sass-converter
@@ -41,44 +33,18 @@ github: [metadata]
 sass:
   style: compressed
 
-# Pagination
-paginate: 3
-paginate_path: "/stories/page:num"
-
 # ------------------------- Defaults and Collections ------------------------- #
 
 # Defaults
 defaults:
   - scope:
-      type: posts
-      path: _posts
-    values:
-      is_post: true
-      layout: post
-      hide_hero: false
-      image: https://via.placeholder.com/1200x800
-      show_sidebar: true
-      permalink: /stories/:title/
-  - scope:
       type: pages
       path: pages
     values:
-      is_post: false
-      layout: page
-      show_sidebar: true
+      layout: default
 
 # Collections
 collections_dir: collections
-collections:
-  building_blocks:
-    output: true
-    image: https://via.placeholder.com/800x600
-    show_sidebar: false
-  methods:
-    output: true
-  glossary:
-    output: true
-    show_sidebar: false
 
 # --------------------------- Includes and Excludes -------------------------- #
 
