--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -1,21 +1,33 @@
-name: Build and deploy Jekyll site to GitHub Pages
+name: Build development and deploy it
 
 on:
   push:
     branches:
       - main
 
+env:
+  URL: theme.intia.de
+
 jobs:
-  github-pages:
+  build-test:
     runs-on: ubuntu-latest
+    environment:
+      name: development
+      url: https://${{ env.URL }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/cache@v2
+      - name: Checkout repo
+        uses: actions/checkout@v2
+
+      - name: Using cache
+        uses: actions/cache@v2
         with:
           path: vendor/bundle
           key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
           restore-keys: |
             ${{ runner.os }}-gems-
-      - uses: helaili/jekyll-action@v2
+
+      - name: Build Site
+        uses: helaili/jekyll-action@v2
         with:
           token: ${{ secrets.JEKYLL_TOKEN }}
+          target_branch: "gh-pages"
