add sample for footer an button demo page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,3 +24,7 @@
   dropdown:
     - name: Mitmachen
       link: /mitmachen/
+- name: Demos
+  dropdown:
+    - name: Button
+      link: /buttons/
