--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "dependencies": {
     "bulma": "^0.9.3",
-    "bulma-block-list": "^0.4.1"
+    "bulma-block-list": "^0.4.1",
+    "bulma-carousel": "^4.0.24"
   }
 }
