--- a/_data/landing-page.yml
+++ b/_data/landing-page.yml
@@ -18,6 +18,6 @@ sections:
     text: |
         Erklärung der verwendeten Begriffe, wissenschaftliche Texte zu partizipativer und inklusiver Technikentwicklung und eigene Veröffentlichungen des Forschungsprojektes.
     image: https://via.placeholder.com/1200x800
-    icon: fa-case
+    icon: fa-briefcase
     link: /wissen/
     link_text: Zum Wissen
