--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "bulma": "^0.9.3",
     "bulma-block-list": "^0.4.1",
     "bulma-carousel": "^4.0.24"
+  },
+  "devDependencies": {
+    "@creativebulma/bulma-tooltip": "^1.2.0"
   }
 }
