add loading of all post in stories

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -52,6 +52,8 @@
       link: /methods-filter/
     - name: Stories teaser
       link: /stories-teaser/
+    - name: Stories
+      link: /stories/
     - name: Text
       link: /textblock/
     - name: Text highlight
