add simple search

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -60,3 +60,5 @@
       link: /textblock-highlight/
     - name: Text with image
       link: /textblock-with-image/
+    - name: Search
+      link: /search/
