--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,5 +1,6 @@
 title: Write us
 introduction: Lorem ipsum.
 action: https://submit-form.com/ujaWfjyi
+botpoison_key: pk_9972f5d6-986d-49bf-84b7-11b6222dfae2
 checkbox: |
   Ich akzeptiere das für die Daten-Erfassung der Dienst Formspark.io genutzt wird. Für nähere Informationen zur Daten-Erfassung <a href="https://formspark.io/legal/privacy-policy/">hier klicken</a>.
