add alternative way for icons

--- a/_data/left-right-demo.yml
+++ b/_data/left-right-demo.yml
@@ -3,7 +3,7 @@ sections:
     text: |
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque non enim dolor. Pellentesque eget eros blandit, imperdiet metus id, sagittis dolor. 
     image: https://via.placeholder.com/1200x800
-    icon: fa-tools
+    icon: icon-handshake
     link: /
     link_text: More
   - title: Lorem Lipsum
