add option for menu items withouth dropdown

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -33,9 +33,7 @@
     - name: Header markdown subtitle
       link: /header-subtitle/
 - name: Highlighter
-  dropdown:
-    - name: Highlighter
-      link: /highlighter/
+  link: /highlighter/
 - name: Other
   dropdown:
     - name: Button
@@ -66,5 +64,4 @@
       link: /textblock-with-image/
     - name: Search
       link: /search/
-- name: INTIA
-- name: IS
+- name: News-Demo
